; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_flow.c_flow_cache_flush_per_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_flow.c_flow_cache_flush_per_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flow_flush_info = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.tasklet_struct = type { i64 }
%struct.TYPE_4__ = type { %struct.tasklet_struct }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @flow_cache_flush_per_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flow_cache_flush_per_cpu(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.flow_flush_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tasklet_struct*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.flow_flush_info*
  store %struct.flow_flush_info* %7, %struct.flow_flush_info** %3, align 8
  %8 = call i32 (...) @smp_processor_id()
  store i32 %8, i32* %4, align 4
  %9 = load %struct.flow_flush_info*, %struct.flow_flush_info** %3, align 8
  %10 = getelementptr inbounds %struct.flow_flush_info, %struct.flow_flush_info* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call %struct.TYPE_4__* @per_cpu_ptr(i32 %13, i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  store %struct.tasklet_struct* %16, %struct.tasklet_struct** %5, align 8
  %17 = load %struct.flow_flush_info*, %struct.flow_flush_info** %3, align 8
  %18 = ptrtoint %struct.flow_flush_info* %17 to i64
  %19 = load %struct.tasklet_struct*, %struct.tasklet_struct** %5, align 8
  %20 = getelementptr inbounds %struct.tasklet_struct, %struct.tasklet_struct* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  %21 = load %struct.tasklet_struct*, %struct.tasklet_struct** %5, align 8
  %22 = call i32 @tasklet_schedule(%struct.tasklet_struct* %21)
  ret void
}

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local %struct.TYPE_4__* @per_cpu_ptr(i32, i32) #1

declare dso_local i32 @tasklet_schedule(%struct.tasklet_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
